--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,8 @@
 # just a flag
 ENV = 'development'
 
-# base api
-VUE_APP_BASE_API = '/dev-api'
+# base api API中的URL接口=base_api+url
+VUE_APP_BASE_API = '/abc/api'
+
+port = 8080
 
